# esbuild_side_effects_repro

./: BUILD.bazel  MODULE.bazel  index.js  package.json
